--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,14 @@ p {
     color: rgba(255, 255, 255, .75);
 }
 
+.button {
+    border-radius: 25px;
+    background: rgb(95, 2, 31);
+    padding: 10px;
+    color: rgba(255, 255, 255, .75);
+    text-decoration: none;
+  }
+
 .link {
     text-decoration: underline;
     color: rgb(95, 2, 31);
