added img to css

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@ p {
     color: rgba(255, 255, 255, .75);
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 #header {
     color: rgb(53, 15, 89);
     font-weight: 800;
