--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,34 @@
 body {
-    background:  rgba(0,0,0, .6);
+    background:  rgba(10,10,10, .9);
     font-family: 'Times New Roman', sans-serif, Times, serif;
 }
 
 p {
     color: rgba(255, 255, 255, .75);
+    font-size: 18px;
 }
 
 #header {
-    color: rgb(53, 15, 89);
+    color:rgb(111,38,153);
     font-weight: 800;
     text-align: center;
     font-size: 42px;
 }
 
 .title {
-    color: rgb(53, 15, 89);
+    color:rgb(111,38,153);
     text-decoration: underline;
     font-size: 27px;
 }
 
 .subtitle {
-    color: rgb(53, 15, 89);
-    font-size: 22px;
+    color:rgb(111,38,153);
+    font-size: 24px;
 }
 
 .list-item {
     color: rgba(255, 255, 255, .75);
+    font-size: 18px;
 }
 
 .button {
@@ -39,7 +41,7 @@ p {
 
 .link {
     text-decoration: underline;
-    color: rgb(53, 15, 89);
+    color:rgb(111,38,153);
 }
 
 .bold {
@@ -53,13 +55,18 @@ p {
 /* Nav Bar */
 
 .topnav {
-    background-color:  rgb(53, 15, 89);
+    background-color: rgb(111,38,153);
     overflow: hidden;
+    padding-bottom: 15px;
+}
+
+.topnav li {
+    list-style: none;
 }
 
 .topnav a {
     float: left;
-    color: rgba(255, 255, 255, .75);
+    color: rgba(255, 255, 255);
     text-align: center;
     padding: 10px 12px;
     text-decoration: none;
