--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,13 @@ p {
     padding: 0px 16px;
 }
 
+img {
+    display: block;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #header {
     color:rgb(111,38,153);
     font-weight: 800;
@@ -63,6 +70,10 @@ p {
     font-style: italic;
 }
 
+.profilepic {
+    width: 500px;
+}
+
 /* Nav Bar */
 
 .topnav {
@@ -71,14 +82,18 @@ p {
 }
 
 .topnav ul li {
-    position: relative;
+    /* position: relative; */
     list-style: none;
 }
 
 .topnav ul li ul {
-    display: block;
+    /* display: block; */
     padding: 24px 14px;
-    position: absolute;
+}
+
+.topnav ul li ul li {
+    /* display: block; */
+    padding: 24px 14px;
 }
 
 .topnav a {
